# minidump-writer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml  release.toml
.cargo/: android-runner.sh  config.toml
.github/: CODEOWNERS
.github/workflows/: audit.yml  ci.yml
crates/crash-context/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/crash-context/src/: linux.rs
crates/crash-context/src/mac/: ipc.rs
crates/linux/process-backend/: CHANGELOG.md  Cargo.toml  release.toml
crates/linux/process-backend/src/: lib.rs
crates/linux/process-backend/src/local/: error.rs  mod.rs  module_reader.rs  syscall_invoker.rs  syscall_runner.rs
crates/linux/process-reader/: README.md
crates/linux/process-reader/src/: error.rs  lib.rs  wrapper.rs
crates/process-reader/: CHANGELOG.md  Cargo.toml  release.toml
crates/process-reader/src/: lib.rs
crates/process-reader/src/linux/: error.rs  mod.rs  wrapper.rs
src/: android.rs  dir_section.rs  dso_debug.rs  error_list.rs  errors.rs  lib.rs  linux.rs  linux_ptrace_dumper.rs  mac.rs  maps_reader.rs  mem_writer.rs  minidump_cpu.rs  minidump_format.rs  minidump_writer.rs  module_reader.rs  process_reader.rs  section_writer.rs  serializers.rs  thread_info.rs  windows.rs
src/crash_context/: crash_context_aarch64.rs  crash_context_arm.rs  crash_context_x86.rs  crash_context_x86_64.rs  mod.rs
src/dumper_cpu_info/: cpu_info_arm.rs  cpu_info_x86_mips.rs  mod.rs
src/fail_enabled/: active.rs  inactive.rs  mod.rs
src/freebsd/: auxv.rs  maps_reader.rs  mod.rs  module_reader.rs  process_reader.rs  serializers.rs  vm_permissions.rs
src/freebsd/auxv/: mod.rs  reader.rs
src/freebsd/crash_context/: mod.rs  x86_64.rs
src/freebsd/dumper_cpu_info/: mod.rs  x86_64.rs
src/freebsd/minidump_writer/: app_memory_stream.rs  errors.rs  exception_stream.rs  handle_data_stream.rs  mappings.rs  memory_info_list_stream.rs  memory_list_stream.rs  mod.rs  systeminfo_stream.rs  thread_list_stream.rs  thread_names_stream.rs
src/freebsd/process_inspection/: mod.rs  process_reader.rs  regs.rs
src/freebsd/thread_info/: mod.rs  x86_64.rs  x86_64_regs.rs
src/linux/: android.rs  build_id_reader.rs  crash_context.rs  dso_debug.rs  dumper_cpu_info.rs  errors.rs  maps_reader.rs  mem_reader.rs  minidump_writer.rs  mod.rs  module_reader.rs  process_reader.rs  ptrace_dumper.rs  sections.rs  serializers.rs  thread_info.rs
src/linux/auxv/: mod.rs  reader.rs
src/linux/crash_context/: aarch64.rs  arm.rs  mod.rs  x86.rs  x86_64.rs
src/linux/crash_context_ext/: aarch64.rs  arm.rs  mod.rs  x86.rs  x86_64.rs
src/linux/dumper_cpu_info/: arm.rs  mod.rs  x86.rs  x86_mips.rs
src/linux/minidump_writer/: app_memory.rs  errors.rs  handle_data_stream.rs  mappings.rs  memory_info_list_stream.rs  mod.rs  thread_list_stream.rs
src/linux/process_inspection/: direct.rs  mod.rs  process_reader.rs
src/linux/sections/: app_memory.rs  exception_stream.rs  mappings.rs  memory_info_list_stream.rs  memory_list_stream.rs  systeminfo_stream.rs  thread_list_stream.rs  thread_names_stream.rs
src/linux/thread_info/: aarch64.rs  arm.rs  mips.rs  mod.rs  x86.rs
src/mac/: errors.rs  mach.rs  mach_helpers.rs  minidump_writer.rs  module_reader.rs  process_reader.rs  streams.rs  task_dumper.rs
src/mac/streams/: breakpad_info.rs  exception.rs  memory_list.rs  misc_info.rs  module_list.rs  system_info.rs  thread_list.rs  thread_names.rs
src/minidump_cpu/: amd64.rs  minidump_cpu_aarch64.rs  minidump_cpu_amd64.rs  minidump_cpu_arm.rs  minidump_cpu_x86.rs  mod.rs
src/sections/: app_memory.rs  exception_stream.rs  mappings.rs  memory_list_stream.rs  mod.rs  systeminfo_stream.rs  thread_list_stream.rs  thread_names_stream.rs
src/thread_info/: mod.rs  thread_info_aarch64.rs  thread_info_arm.rs  thread_info_mips.rs  thread_info_x86.rs
src/windows/: errors.rs  ffi.rs  minidump_writer.rs  module_reader.rs  process_reader.rs
tests/: freebsd_minidump_writer.rs  freebsd_module_reader.rs  linux_minidump_writer.rs  linux_minidump_writer_failspot.rs  linux_minidump_writer_soft_error.rs  linux_module_reader.rs  mac_minidump_writer.rs  minidump_writer.rs  ptrace_dumper.rs  ptrace_dumperr.rs  task_dumper.rs  windows_minidump_writer.rs
tests/common/: mod.rs
