[package]
name = "process-reader"
version = "0.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
readme = "README.md"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = { version = "0.2.186", default-features = false }
serde = { version = "1.0.228", default-features = false, features=["derive"], optional = true }

[features]
serde = ["dep:serde"]